rgbds-0.6.1/test/asm/symbol-override.asm
V = 0
V = 1
    PRINTLN "V={V}"

W equ 1
W = 0

rsset 1
X rb 0
X = 0

SECTION "Test", ROM0[1]
Y:
Y = 0
